# graphidx

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  index.html
.github/workflows/: JuliaCI.yml  RustCI.yml
cxx/: .dir-locals.el  genindex.html  idx.html  index.html  lina.hpp  objects.inv  search.html  searchindex.js  src  tree.html  utils.html
cxx/benchmark/: CMakeLists.txt  grididx.cxx  heap.hpp  prim_mst.hpp  spantree.cxx
cxx/bits/: minmax.hpp  weights.hpp
cxx/graphidx/: edges.hpp  grid.hpp  heap.hpp
cxx/graphidx/bits/: bitstring.hpp  clamp.hpp  clz.hpp  endian.hpp  weights.hpp
cxx/graphidx/heap/: aryheap.hpp  binheap.hpp  gnu_heap.hpp  lemon_heap.hpp  octaheap.hpp  quadheap.hpp
cxx/graphidx/idx/: biadjacent.hpp  children.hpp  cluster.hpp  edgegraph.hpp  groupby.hpp  incidence.hpp  index.hpp  partition.hpp
cxx/graphidx/io/: autoistream.hpp  bz2istream.hpp  dimacs10.hpp  gzistream.hpp  istreamdbg.hpp  magic.hpp  parse.hpp  path.hpp  snap.hpp
cxx/graphidx/spanning/: connected.hpp  kruskal_mst.hpp  prim_mst.hpp  unionfind.hpp
cxx/graphidx/sparse/: csc.cpp
cxx/graphidx/std/: deque.hpp  queue.hpp  stack.hpp  uvector.hpp
cxx/graphidx/tree/: bfs.hpp  dfs.hpp  inorder.hpp  postorder.hpp  prufer.hpp  van_emde_boas.hpp
cxx/graphidx/utils/: cfile.hpp  compiler.hpp  dispatch.hpp  gnu_heap.hpp  heap.hpp  lemon_heap.hpp  perftimer.hpp  perm.hpp  popen.hpp  string.hpp  timer.hpp  viostream.hpp
cxx/idx/: biadjacent.hpp  edgegraph.hpp  groupby.hpp  index.hpp  partition.hpp
cxx/io/: dimacs10.hpp  parse.hpp
cxx/spanning/: connected.hpp  unionfind.hpp
cxx/sparse/: csc.hpp
cxx/std/: deque.hpp  queue.hpp  uvector.hpp
cxx/test/: doctests.cpp  doctestx.hpp  lemon_heap.hpp  migrate.py  test_bfs.cpp  test_biadjacent.cpp  test_binheap.cpp  test_bitstring.cpp  test_bz2.cpp  test_children.cpp  test_clz.cpp  test_connected.cpp  test_csc.cpp  test_deque.cpp  test_dfs.cpp  test_dimacs10.cpp  test_grid.cpp  test_grididx.cpp  test_gridincidence.cpp  test_gz.cpp  test_heap.cpp  test_hex.cpp  test_incidence.cpp  test_inorder.cpp  test_kruskal_mst.cpp  test_lemon_fib.cpp  test_lina.cpp  test_min_cut.cpp  test_mst.cpp  test_mst37.hpp  test_neg.cpp  test_parse.cpp  test_partition.cpp  test_perm.cpp  test_postorder.cpp  test_prufer.cpp  test_queue.cpp  test_shift.cpp  test_snap.cpp  test_stack.cpp  (+7 more)
cxx/tree/: bfs.hpp  order.hpp  postorder.hpp
cxx/utils/: perftimer.hpp  perm.hpp  popen.hpp  timer.hpp  viostream.hpp
docs/: .gitignore  Manifest.toml  Project.toml  doctest.jl  make.jl  makefile
docs/src/cxx/: index.rst
docs/src/julia/: bits.md  grid.md  idx.md  index.md  io.md  tree.md  utils.md
docs/src/python/: conf.py  idx.rst
docs/src/welcome/: conf.py  index.rst
julia/: Project.toml  bits.html  grid.html  idx.html  index.html  lina.html  mst.html  search.html  stats.html  tree.html
julia/benchmark/: spantree.jl
julia/src/: GraphIdx.jl  Io.jl  Tree.jl  Utils.jl  biadjacent.jl  bits.jl  cluster.jl  edgegraph.jl  graph.jl  graphviz.jl  grid.jl  incidence.jl  precompile.jl  prim_mst.jl  prim_mst.old.jl  stats.jl  weightedgraph.jl  weights.jl
julia/src/Io/: dimacs.jl  dimacs10.jl  parse.jl  snap.jl
julia/src/Tree/: children.jl  dfs.jl  hierarchy.jl  lca.jl  root.jl
julia/src/Utils/: heap.jl  mutref.jl  thousand.jl
julia/src/tree/: children.jl  dfs.jl
julia/test/: runtests.jl  square.jl  test_dimacs10.jl  test_grid.jl  test_incmat.jl  test_inorder.jl  test_magick.jl  test_mst.jl  test_parse.jl  test_root.jl  test_snap.jl  test_unionfind.jl  test_varargs.jl  test_weights.jl
python/: .gitignore  _graphidx.cpp  genindex.html  idx.cpp  idx.html  index.html  io.cpp  order.cpp  py-modindex.html  py.html  py_np.hpp  pytest.ini  search.html  searchindex.js  setup.py  spanning.cpp  timer.cpp  tree.html
python/_sources/: index.rst.txt  py.rst.txt  tree.rst.txt
python/graphidx/: __init__.py  graphviz.py  hierarchy.py  idx.py  io.py  lca.py  timer.py  tree.py  weights.py
python/graphidx/py/: __init__.py  _numba.py  children.py  prufer.py  root.py  unionfind.py
python/test/: .gitignore  example.py  requirements.txt  test_bfs.py  test_biadjacent.py  test_children.py  test_cluster.py  test_graphviz.py  test_grid.py  test_hierarchy.py  test_io.py  test_lca.py  test_magic.py  test_partition.py  test_postorder.py  test_prufer.py  test_pychildren.py  test_reorder.py  test_sort.py  test_spanning.py  test_timer.py  test_tree.py  testgraph.dimacs10  wheel5.dimacs10
rust/: Cargo.toml  aliases.js  index.html  search-index.js  settings.html  sidebar-items.js  source-files.js
rust/graphidx/: all.html
rust/graphidx/tree/: index.html  struct.Tree.html
rust/graphidx/tree/children/: struct.ChildrenIndex.html
rust/graphidx/tree/root/: fn.find_root.html
rust/graphidx/weights/: index.html  sidebar-items.js  struct.ConstantWeights.html
rust/implementors/core/cmp/: trait.PartialEq.js
rust/implementors/core/fmt/: trait.Debug.js
rust/implementors/core/marker/: trait.Send.js  trait.Sync.js
rust/implementors/core/ops/index/: trait.Index.js
rust/implementors/graphidx/weights/: trait.Weights.js
rust/src/: lib.rs  lina.rs  weights.rs
rust/src/graphidx/: lib.rs.html  weights.rs.html
rust/src/graphidx/tree/: children.rs.html  mod.rs.html  root.rs.html
rust/src/tree/: children.rs  mod.rs  root.rs
rust/tree/: fn.find_root.html  sidebar-items.js  struct.ChildrenIndex.html
rust/weights/: struct.ArrayWeights.html  trait.Weights.html
